# sleepbrl_breath_extraction

./: README.md  default_config.json  pyproject.toml  requirements.txt
radar_to_breath/: __init__.py  annotations.py  cli.py  config.py  diagnostics.py  edf_io.py  pipeline.py  processing.py  validation.py
scripts/: audit_sleepbrl.py
tests/: test_cli_index.py  test_contract_and_annotations.py  test_synthetic_iq.py
