[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "radar-to-breath"
version = "0.1.0"
description = "Deterministic SleepBRL radar I/Q to candidate respiratory waveform conversion"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "scipy>=1.10",
  "mne>=1.5",
  "matplotlib>=3.7",
  "openpyxl>=3.0"
]

[project.optional-dependencies]
test = ["pytest>=7.0"]

[tool.setuptools.packages.find]
include = ["radar_to_breath*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
